--- a/kubernatesdeploy.yaml
+++ b/kubernatesdeploy.yaml
@@ -1,37 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bankapp-ajay-deploy
+  name: healthcare-app-deploy
   labels:
-    app: bankapp-ajay-app
+    app: healthcare-app
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: bankapp-ajay-app
+      app: healthcare-app
   template:
     metadata:
       labels:
-        app: bankapp-ajay-app
+        app: healthcare-app
     spec:
       containers:
-      - name: bankapp-ajay-container
-        image: ajaynew2025/bankapp-new
+      - name: healthcare-app-container
+        image: ajaynew2025/healthcare-app
         ports:
-        - containerPort: 8081
+        - containerPort: 8082
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: bankapp-np-service
+  name: healthcare-np-service
   labels:
-    app:  bankapp-ajay-app
+    app: healthcare-app
 spec:
   selector:
-    app: bankapp-ajay-app
-
+    app: healthcare-app
   type: NodePort
   ports:
-  - nodePort: 31101
-    port: 8081
-    targetPort: 8081
+  - nodePort: 30035
+    port: 8082
+    targetPort: 8082
